--- a/aboutblank.html
+++ b/aboutblank.html
@@ -51,37 +51,42 @@ URL: https://code.google.com/p/io-2012-slides
 
   <slide>
     <hgroup>
-      <h2>Slide with Bullets that Build</h2>
-      <h3>Subtitle Placeholder</h3>
+      <h2>Functional Requirements</h2>
     </hgroup>
     <article>
-      <p>A list where items build:</p>
       <ul class="build">
-        <li>Pressing 'h' highlights code snippets</li>
-        <li>Pressing 'p' toggles speaker notes (if they're on the current slide)</li>
-        <li>Pressing 'f' toggles fullscreen viewing</li>
-        <li>Pressing 'w' toggles widescreen</li>
-        <li>Pressing 'o' toggles overview mode</li>
-        <li>Pressing 'ESC' toggles off these goodies</li>
-      </ul>
-      <p>Another list, but items fade as they build:</p>
-      <ul class="build fade">
-        <li>Hover over me!</li>
-        <li>Hover over me!</li>
-        <li>Hover over me!</li>
+        <li>Look & Feel: Clean, minimal, responsive</li>
+        <li>Tell a Story</li>
+        <li>Blog Space</li>
+        <li>Display content in interesting ways</li>
       </ul>
     </article>
   </slide>
 
   <slide>
     <hgroup>
-      <h2>Slide with (Smaller Font)</h2>
+      <h2>Functional Requirements</h2>
+      <h3>Tell a Story</h3>
     </hgroup>
-    <article class="smaller">
+    <article>
       <ul>
-        <li>All <a href="http://google.com">links</a> open in new tabs.</li>
-        <li>To change that this, add <code>target="_self"</code> to the link.</li>
+        <li>TimelineJS - <a href="http://about.blanktech.net/content/about">About:Me</a></li>
       </ul>
+      <pre class="prettyprint" data-lang="php">
+function timelinejs_node_view($node, $view_mode, $langcode) {
+  $timeline_field = $node->field_include_timeline_['und'][0]['value'];
+  if ($timeline_field != 1) {
+    return;
+  }
+    drupal_add_js(array('timelinejs' => array(
+      'embedSource' => "<script type='text/javascript' src='".$GLOBALS['base_url']."/".drupal_get_path('module','timelinejs')."/TimelineJS/compiled/js/storyjs-embed.js'></script>",
+      )), array('type' => 'setting', 'weight' => 10));
+    drupal_add_js(
+        $GLOBALS['base_path'] . drupal_get_path('module','timelinejs') . "/timeline_embed.js", 
+        array('type' => 'file', 'weight' => 0));
+}
+
+    </pre>
     </article>
   </slide>
 
