minor style changes

--- a/aboutblank.html
+++ b/aboutblank.html
@@ -27,7 +27,7 @@ URL: https://code.google.com/p/io-2012-slides
 <slides class="layout-widescreen">
 
   <slide class="title-slide segue nobackground">
-    <aside class="gdbar"><img src='http://about.blanktech.net/sites/default/files/drupal_icon.png' style='width:50px; height: 50px;margin-top:25px;'></aside>
+    <aside class="gdbar"><a href="http://about.blanktech.net/" class='no-underline'><button>Launch</a></button><img src='http://about.blanktech.net/sites/default/files/drupal_icon.png' style='width:50px; height: 50px;margin-top:25px;'></aside>
     <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
     <hgroup class="auto-fadein">
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
@@ -40,6 +40,8 @@ URL: https://code.google.com/p/io-2012-slides
     <hgroup>
       <h2>Agenda</h2>
     </hgroup>
+    <br />
+    <br />
     <article>
       <ul>
         <li>Functional Requirements</li>
@@ -53,12 +55,14 @@ URL: https://code.google.com/p/io-2012-slides
     <hgroup>
       <h2>Functional Requirements</h2>
     </hgroup>
+    <br />
+    <br />
     <article>
       <ul class="build">
         <li>Look & Feel: Clean, minimal, responsive</li>
         <li>Tell a Story</li>
         <li>Blog Platform</li>
-        <li>Display content in interesting ways</li>
+        <li>Display content from multiple sources</li>
       </ul>
     </article>
   </slide>
@@ -66,11 +70,13 @@ URL: https://code.google.com/p/io-2012-slides
   <slide>
     <hgroup>
       <h2>Functional Requirements</h2>
+        <img src="images/mobile.png" class='bordered pull-right' style='width:30%; padding-left:5px;'>
       <h3>Look & Feel</h3>
+      <br />
       <ul class='build'>
         <li>Omega sub-theme</li>
         <li>Display Suite for content type-level layout</li>
-        <li>Custom mobile menu (jQuery) and responsive images (CSS)</li>
+        <li>Custom mobile menu (jQuery) and responsive images (CSS) <a href='http://about.blanktech.net/hacks' class='no-underline'><button>Demo</button></a></li>
         <li>Pathauto for clean URLs</li>
     </hgroup>
     <article>
@@ -129,9 +135,9 @@ URL: https://code.google.com/p/io-2012-slides
     <slide>
     <hgroup>
         <h2>Functional Requirements</h2>
-        <h3>Display and Filter Data</h3>
+        <h3>Display and Filter Content</h3>
         </hgroup>
-        <img class='pull-right' src='images/feeds_importer.png'>
+        <img class='bordered pull-right' src='images/feeds_importer.png'>
         <article>
         <br />
             <h1>Feeds Importers</h1>
@@ -146,10 +152,10 @@ URL: https://code.google.com/p/io-2012-slides
     <slide>
     <hgroup>
         <h2>Functional Requirements</h2>
-        <h3>Display and Filter Data</h3>
+        <h3>Display and Filter Content</h3>
         </hgroup>
         <div class='centered'>
-            <img src='images/feed.png'>
+            <img class='bordered' src='images/feed.png'>
         </div>
         <article class='smaller'>
         <h1>View</h1>
@@ -165,7 +171,7 @@ URL: https://code.google.com/p/io-2012-slides
     <slide>
     <hgroup>
         <h2>Functional Requirements</h2>
-        <h3>Display and Filter Data</h3>
+        <h3>Display and Filter Content</h3>
         </hgroup>
         <article class='smaller'>
         <h1>Display</h1>
@@ -242,7 +248,7 @@ URL: https://code.google.com/p/io-2012-slides
       <h2>&lt;Thank You!&gt;</h2>
     </article>
     <p class="auto-fadein" data-config-contact>
-      <!-- populated from slide_config.json -->
+    <!-- populated from slide_config.json -->
     </p>
   </slide>
 
