Changed launch button

--- a/aboutblank.html
+++ b/aboutblank.html
@@ -27,13 +27,16 @@ URL: https://code.google.com/p/io-2012-slides
 <slides class="layout-widescreen">
 
   <slide class="title-slide segue nobackground">
-    <aside class="gdbar"><a href="http://about.blanktech.net/" class='no-underline'><button>Launch</a></button><img src='http://about.blanktech.net/sites/default/files/drupal_icon.png' style='width:50px; height: 50px;margin-top:25px;'></aside>
+    <aside class="gdbar"><img src='http://about.blanktech.net/sites/default/files/drupal_icon.png' style='width:50px; height: 50px;margin-top:25px;'></aside>
     <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
     <hgroup class="auto-fadein">
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
     </hgroup>
+    <div class='pull-right'>
+        <a href="http://about.blanktech.net/" class='no-underline'><button>about.blanktech.net</a></button>
+        </div>
   </slide>
 
   <slide>
