Fixed button bug

--- a/aboutblank.html
+++ b/aboutblank.html
@@ -35,7 +35,7 @@ URL: https://code.google.com/p/io-2012-slides
       <p data-config-presenter><!-- populated from slide_config.json --></p>
     </hgroup>
     <div class='pull-right'>
-        <a href="http://about.blanktech.net/" class='no-underline'><button>about.blanktech.net</a></button>
+        <a href="http://about.blanktech.net/" class='no-underline'><button>about.blanktech.net</button></a>
         </div>
   </slide>
 
